[SVR-4] infra: CD 환경 구축 (#2)
* chore: application.yml 변경
- 로컬 db mysql로 변경
- dev프로필 관련 설정 추가

* infra: cd 관련 스크립트 추가
- dockerfile, run-java.sh 추가
- bootBuildImage task추가
- github action script 추가

* feat: cors 관련 설정 추가

* feat: same-site 설정을 위해 Cookie 클래스에서 ResponseCookie로 변경

* feat: cors 설정 변경

* infra: 개발 서버 cd script 수정